# flashi

./: .editorconfig  .env  .eslintignore  .eslintrc.cjs  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lib/win-gsmtc/: Cargo.toml
src/: App.vue  main.ts
src-internal/: Cargo.toml  build.rs
src-internal/examples/screengrab/: Cargo.toml:Zone.Identifier
src-internal/robot/: README.md  mouse.c
src-internal/src/: key.rs  lib.rs  mouse.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  registry.rs  state.rs  tray.rs
src-tauri/src/commands/: connect.rs
src-tauri/src/compiler/: commands.rs  keys.rs  mod.rs  tokenizer.rs  tokens.rs
src-tauri/src/compiler/commands/: key_down.rs  key_press.rs  key_up.rs  log.rs  mod.rs  mouse_click.rs  mouse_down.rs  mouse_move.rs  mouse_move_relative.rs  mouse_up.rs  press.rs  prompt.rs  scroll.rs  typing.rs  typing_parse.rs
src-tauri/src/compiler/commands/utils/: inputs.rs
src-tauri/src/compiler/parser/: mod.rs
src-tauri/src/compiler/tokenizer/: mod.rs  tokens.rs
src-tauri/src/webrtc/: events.rs  message.rs  mod.rs  payload.rs
src/components/: HelloWorld.vue
src/components/CodeEditor/: CodeEditor.vue  lang.ts
src/components/Macro/: MacroCard.vue
src/composables/: useMacroList.ts  useMacroModifier.ts  useRunScript.ts  useScript.ts  useSetting.ts
src/composables/queries/: useActivityList.ts  useDeviceList.ts  useMacroCreate.ts  useMacroGet.ts  useMacroList.ts  useMacroPaginate.ts  useMacroRemove.ts  useMacroUpdate.ts
src/composables/settings/: useLanguage.ts  useSetting.ts  useTheme.ts
src/constants/: setting.ts  storage.ts
src/global/: connection.d.ts  firestore.d.ts  firestoreUser.d.ts  language.d.ts  paginate.d.ts
src/layouts/: AsideLayout.vue  AssideLayout.vue  PrimaryLayout.vue  PrimaryLayouts.vue
src/plugins/: firebase.ts  i18n.ts  quasar.ts
src/queries/: connection.ts  device.ts  macro.ts
src/routes/: index.ts
src/routes/modules/: account.ts  auth.ts  dashboard.ts  home.ts  index.ts  macro.ts  setting.ts
src/server/: connect.ts  index.ts  registerDevice.ts  status.ts
src/store/: useAuth.ts  useConnection.ts
src/styles/: card.scss  main.scss  scrollbar.scss  variables.scss
src/types/: setting.ts
src/utils/: auth.ts  time.ts
src/views/Account/: AccountView.vue
src/views/Auth/: RegisterView.vue  SignInView.vue
src/views/Dashboard/: DashboardView.vue
src/views/Dashboard/sections/: DevicesSection.vue  LastActivitySection.vue
src/views/Home/: HomeView.vue
src/views/Macro/: CreateView.vue  EditorView.vue  MacroView.vue
src/views/Setting/: SettingView.vue
src/views/Setting/sections/: AutoStartItem.vue  LanguageItem.vue  ThemeItem.vue  UpdateItem.vue  VersionItem.vue
test/: update.json
