[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Paweł Romanowski"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all", "system-tray", "updater"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3"
webrtc = "0.6"
duckscript = "0.7.4"
duckscriptsdk = "0.8.14"
machineid-rs = "1.2.1"
sysinfo = "0.26.7"
enigo = { git = "https://github.com/nexthis/enigo", branch = "master" }

#gsmtc = { path = "../lib/win-gsmtc" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
