[package]
name = "gsmtc"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.25", features = ["sync", "macros", "rt"] }
windows = { version = "0.44", features = ["Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1.0"
